--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -23,6 +23,12 @@
   color: #61dafb;
 }
 
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
