--- a/src/stylesheets/Login.scss
+++ b/src/stylesheets/Login.scss
@@ -43,7 +43,7 @@
 
 	margin-top: 30px;
 
-	font-size: 0.90rem;
+	font-size: 1rem;
 	background-color: white;
 	
 	outline: none;
@@ -54,6 +54,7 @@
 		border-color: #E50A12;
 	}
 	&:active {
+		border-color: #E50A12;
 		background-color: #E50A12;
 		color: white;
 	}
