--- a/src/stylesheets/Search.scss
+++ b/src/stylesheets/Search.scss
@@ -6,13 +6,14 @@
 #Search {
 	min-height: 100vh;
 	height: 100%;
-	padding-top: 100px;
+	padding: 100px 0 50px;
 	text-align: center;
 	background-color: darkgrey;
 }
 
 .search-form {
-	position: relative;
+	display: flex;
+	justify-content: center;
 }
 
 .search-input {
@@ -20,29 +21,31 @@
 	padding: 4px 12px;
 
 	font-size: 1.2rem;
-	border-radius: 12px 0 0 12px;
 
 	outline: none;
 	border: 2px solid grey;
+	border-right: none;
+	border-radius: 12px 0 0 12px;
 
 	&:focus {
-		border: 2px solid #E50A12;
+		border-color: #E50A12;
+		& + .search-button { border-color: #E50A12; }
 	}
 }
 
 .search-button {
-	position: absolute;
-	top: 0;
-	margin-left: -2px;
 	height: 36px;
-	outline: none;
+
 	color: grey;
+	background-color: white;
+
+	outline: none;
 	border: 2px solid grey;
+	border-left: none;
 	border-radius: 0 12px 12px 0;
 
 	&:hover{
 		color: #E50A12;
-		border: 2px solid #E50A12;
 	}
 
 	&:focus {
@@ -52,14 +55,31 @@
 	}
 }
 
+.empty-search-text {
+	margin: 10%;
+	font-size: 2rem;
+
+	@include media-breakpoint-only(xs) {
+		font-size: 1rem;
+	}
+}
+
 .search-results {
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
 	justify-items: center;
-	grid-row-gap: 30px;
+	grid-row-gap: 50px;
 	margin: 50px 0;
 	
 	background-color: darkgrey;
+
+	@include media-breakpoint-only(lg) {
+		grid-template-columns: 1fr 1fr 1fr;
+	}
+
+	@include media-breakpoint-only(md) {
+		grid-template-columns: 1fr 1fr;
+	}
 
 	@include media-breakpoint-only(sm) {
 		grid-template-columns: 1fr 1fr;
@@ -67,6 +87,32 @@
 
 	@include media-breakpoint-only(xs) {
 		grid-template-columns: 1fr;
+	}
+}
+
+.results-page-button {
+	width: 100px;
+	height: 30px;
+
+	margin: 0 10px;
+	padding: 0;
+
+	background-color: white;
+
+	outline: none;
+	border: 2px solid white;
+	border-radius: 4px;
+
+	&:hover {
+		border-color: #E50A12;
+	}
+	&:active {
+		border-color: #E50A12;
+		background-color: #E50A12;
+		color: white;
+	}
+	&:disabled {
+		border-color: white;
 	}
 }
 
@@ -89,14 +135,31 @@
 
 .movie-card {
 	position: relative;
-	width: 342px;
-	height: 513px;
+
+	// maintain aspect ratio
+	width: 20vw; // 342px default
+	height: 30vw; // 513px default
 
 	&:hover .movie-title { opacity: 1; }
 
+	@include media-breakpoint-only(lg) {
+		width: 28vw;
+		height: 42vw;
+	}
+
+	@include media-breakpoint-only(md) {
+		width: 40vw;
+		height: 60vw;
+	}
+
+	@include media-breakpoint-only(sm) {
+		width: 40vw;
+		height: 60vw;
+	}
+
 	@include media-breakpoint-only(xs) {
-		width: 256px;
-		height: 384px;
+		width: 80vw;
+		height: 120vw;
 	}
 }
 
@@ -104,3 +167,60 @@
 	width: 100%;
 	height: 100%;
 }
+
+.movie-modal {
+	overflow-y: scroll;
+
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+
+	width: 750px;
+	height: 600px;
+	max-width: 100vw;
+	max-height: 80vh;
+
+	margin: auto;
+	padding: 25px;
+
+	color: white;
+	background-color: black;
+	border: 2px solid #E50A12;
+
+	@include media-breakpoint-only(xs) {
+		top: 60px;
+		padding: 15px;
+		width: 100%;
+		border-left: none;
+		border-right: none;
+	}
+}
+
+.mm-h1{
+	@include media-breakpoint-only(xs) {
+		font-size: 1.5rem;
+	}
+}
+
+.mm-h5{
+	@include media-breakpoint-only(xs) {
+		font-size: 1.0rem;
+	}
+}
+
+.mm-close-div {
+	display: flex;
+	justify-content: flex-end;
+}
+
+.mm-close {
+	color: white;
+	transform: scale(2);
+
+	&:hover {
+		color: #E50A12;
+	}
+}
+
