--- a/src/stylesheets/Search.scss
+++ b/src/stylesheets/Search.scss
@@ -8,7 +8,6 @@
 	height: 100%;
 	padding: 100px 0 50px;
 	text-align: center;
-	background-color: darkgrey;
 }
 
 .search-form {
@@ -96,24 +95,6 @@
 
 	margin: 0 10px;
 	padding: 0;
-
-	background-color: white;
-
-	outline: none;
-	border: 2px solid white;
-	border-radius: 4px;
-
-	&:hover {
-		border-color: #E50A12;
-	}
-	&:active {
-		border-color: #E50A12;
-		background-color: #E50A12;
-		color: white;
-	}
-	&:disabled {
-		border-color: white;
-	}
 }
 
 .movie-title {
@@ -135,6 +116,7 @@
 
 .movie-card {
 	position: relative;
+	cursor: pointer;
 
 	// maintain aspect ratio
 	width: 20vw; // 342px default
@@ -170,29 +152,28 @@
 
 .movie-modal {
 	overflow-y: scroll;
-
+	text-align: center;
 	position: absolute;
-	left: 0;
-	right: 0;
 	top: 0;
 	bottom: 0;
+	left: 0;
+	right: 0;
 
-	width: 750px;
-	height: 600px;
-	max-width: 100vw;
+	width: 60vw;
+	height: 500px;
 	max-height: 80vh;
 
 	margin: auto;
-	padding: 25px;
+	padding: 20px;
 
 	color: white;
 	background-color: black;
 	border: 2px solid #E50A12;
 
 	@include media-breakpoint-only(xs) {
-		top: 60px;
-		padding: 15px;
-		width: 100%;
+		top: 50px;
+		padding: 10px;
+		width: 100vw;
 		border-left: none;
 		border-right: none;
 	}
@@ -210,6 +191,32 @@
 	}
 }
 
+.mm-overview-container {
+	width: 90%;
+	margin: auto;
+
+	@include media-breakpoint-only(md) {
+		width: 100%;
+	}
+
+	@include media-breakpoint-only(sm) {
+		width: 100%;
+	}
+
+	@include media-breakpoint-only(xs) {
+		width: 100%;
+	}
+}
+.mm-overview-label {
+	text-align: left;
+	margin: 0;
+}
+.mm-overview-text {
+	text-align: left;
+	background-color: rgb(50,50,50);
+	padding: 15px;
+}
+
 .mm-close-div {
 	display: flex;
 	justify-content: flex-end;
@@ -223,4 +230,3 @@
 		color: #E50A12;
 	}
 }
-
