--- a/src/stylesheets/prelogin.scss
+++ b/src/stylesheets/prelogin.scss
@@ -36,12 +36,18 @@
 	font-weight: bold;
 }
 
+.pl-error {
+	margin: 10px;
+	text-align: left;
+	color: #E50A12;
+	font-size: 1.1rem;
+}
+
 .pl-form-container {
 	margin: auto;
 	text-align: center;
 
 	width: 450px;
-	// height: 70vh;
 	max-width: 100vw;
 	padding: 60px 70px 40px;
 
@@ -51,7 +57,6 @@
 	@include media-breakpoint-only(xs) {
 		padding: 15px;
 		background: black;
-		// height: 80vh;
 	}
 }
 
@@ -78,7 +83,7 @@
 
 
 	&:focus {
-		border-color: grey;
+		border-color: #808080;
 		background-color: #454545;
 	}
 }
@@ -94,10 +99,10 @@
 	font-weight: bold;
 }
 
-.pl-error {
-	margin: 10px;
-	color: #E50A12;
-	font-size: 1.1rem;
+.pl-redirect {
+	&:hover {
+		color: white;
+	}
 }
 
 .pl-loading {
