--- a/src/stylesheets/Search.scss
+++ b/src/stylesheets/Search.scss
@@ -57,6 +57,7 @@
 .empty-search-text {
 	margin: 10%;
 	font-size: 2rem;
+	color: #505050;
 
 	@include media-breakpoint-only(xs) {
 		font-size: 1rem;
@@ -97,23 +98,6 @@
 	padding: 0;
 }
 
-.movie-title {
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-
-	padding: 6px;
-	text-align: center;
-	box-sizing: border-box;
-
-	font-size: 1.5rem;
-	color: white;
-	background-color: rgba(0,0,0, 0.80);
-
-	opacity: 0;
-	transition: opacity 0.20s ease 0s;
-}
-
 .movie-card {
 	position: relative;
 	cursor: pointer;
@@ -121,8 +105,10 @@
 	// maintain aspect ratio
 	width: 20vw; // 342px default
 	height: 30vw; // 513px default
+	// max-width: 342px;
+	// max-height: 513px;
 
-	&:hover .movie-title { opacity: 1; }
+	&:hover .mc-title { opacity: 1; }
 
 	@include media-breakpoint-only(lg) {
 		width: 28vw;
@@ -145,7 +131,48 @@
 	}
 }
 
-.movie-poster {
+.mc-title {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+
+	padding: 2px;
+	text-align: center;
+	box-sizing: border-box;
+
+	font-size: 1.5rem;
+	color: #fff;
+	background-color: rgba(0,0,0, 0.80);
+
+	opacity: 0;
+	transition: opacity 0.20s ease 0s;
+}
+
+.mc-status {
+	position: absolute;
+	top: 0;
+	right: 0;
+
+	padding-left: 3px;
+	box-sizing: border-box;
+
+	background-color: rgba(0,0,0, 0.80);
+	border-radius: 0 0 0 12px;
+
+	font-size: 1.5rem;
+}
+
+svg {
+  display: inline-flex;
+  position: relative;
+  top: -0.20rem;
+}
+.mc-svg  { margin: 0 5px;  }
+.eye     { color: #00AEFF; }
+.backlog { color: #fff; }
+.heart   { color: #E50A12; }
+
+.mc-poster {
 	width: 100%;
 	height: 100%;
 }
@@ -169,6 +196,7 @@
 	color: white;
 	background-color: black;
 	border: 2px solid #E50A12;
+	border-radius: 0 24px 0 24px;
 
 	@include media-breakpoint-only(xs) {
 		top: 50px;
@@ -176,6 +204,7 @@
 		width: 100vw;
 		border-left: none;
 		border-right: none;
+		border-radius: 0;
 	}
 }
 
