completed/backlog tables started for tracker page

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -2,6 +2,10 @@
   background-color: #A9A9A9;
 }
 
+.no-wrap {
+	white-space: nowrap;
+}
+
 .red-btn {
 	color: white;
   background-color: #E50A12;
