--- a/src/stylesheets/MovieTracker.scss
+++ b/src/stylesheets/MovieTracker.scss
@@ -1,6 +1,105 @@
+@import "./_functions.scss";
+@import "./_variables.scss";
+@import "./_breakpoints.scss";
+
+$duration: 0.20s;
+
+
 #MovieTracker {
 	min-height: 100vh;
 	height: 100%;
+	width: 100%;
 	padding: 100px 0 50px;
 	text-align: center;
+}
+
+.mt-count {
+	font-family: Helvetica;
+	margin-bottom: 20px;
+}
+
+.mt-status-options {
+	display: flex;
+	justify-content: center;
+}
+
+
+.mt-bottom {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+
+  width: 100%;
+  height: 2px;
+
+  background-color: #E50A12;
+
+  transform: scaleX(0);
+  transition: transform $duration ease;
+}
+
+
+.mt-status-item {
+	position: relative;
+	cursor: pointer;
+
+	margin: 0 50px;
+	padding-bottom: 1px;
+	text-align: center;
+	font-size: 1.2rem;
+
+	color: white;
+	transition: color $duration ease 0s;
+
+	&:hover {
+		color: #E50A12;
+		.mt-bottom { transform: scaleX(1); }
+	}
+}
+
+.mt-active {
+	color: #E50A12;
+	.mt-bottom { transform: scaleX(1); }
+}
+
+table.mt-table {
+	width: 90%;
+	margin: 50px auto 0;
+}
+
+.mt-table-title {
+	font-size: 1.4rem;
+}
+
+.mt-poster {
+	// maintain aspect ratio 2:3
+	width: 6vw; // 342px default
+	height: 9vw; // 513px default
+}
+
+.mt-overview {
+
+	@include media-breakpoint-only(md) {
+		display: none;
+	}
+
+	@include media-breakpoint-only(sm) {
+		display: none;
+	}
+
+	@include media-breakpoint-only(xs) {
+		display: none;
+	}
+}
+
+.mt-heart, .mt-delete {
+	cursor: pointer;
+	transform: scale(2);
+	&:hover { color: #E50A12; }
+}
+
+.mt-check {
+	cursor: pointer;
+	transform: scale(2);
+	&:hover { color: #00D65F; }
 }
