--- a/src/stylesheets/Navibar.scss
+++ b/src/stylesheets/Navibar.scss
@@ -21,6 +21,10 @@ $duration: 0.20s;
 
 	transition: background-color 0.30s ease 0s;
 
+	@include media-breakpoint-only(sm) {
+		background-color: black;
+	}
+
 	@include media-breakpoint-only(xs) {
 		background-color: black;
 	}
@@ -30,6 +34,10 @@ html:not([data-scroll="0"]) {
 	#Navibar {
 		background-color: rgba(0,0,0, 0.90);
 
+		@include media-breakpoint-only(sm) {
+			background-color: black;
+		}
+
 		@include media-breakpoint-only(xs) {
 			background-color: black;
 		}
@@ -37,6 +45,10 @@ html:not([data-scroll="0"]) {
 }
 
 #basic-navbar-nav {
+	@include media-breakpoint-only(sm) {
+		background-color: black;
+		border-bottom: 1px solid grey;
+	}
 	@include media-breakpoint-only(xs) {
 		background-color: black;
 		border-bottom: 1px solid grey;
@@ -50,6 +62,10 @@ html:not([data-scroll="0"]) {
 .brand {
 	height: $height;
 	margin: 0 2rem;
+
+	@include media-breakpoint-only(sm) {
+		margin: 0 0 0 1rem;
+	}
 
 	@include media-breakpoint-only(xs) {
 		margin: 0 0 0 1rem;
@@ -76,7 +92,7 @@ div.nav-link {
 	cursor: pointer;
 
 	margin: 0 50px;
-	padding: 2px 1px;
+	padding: 0;
 	text-align: center;
 
 	color: white;
@@ -87,10 +103,20 @@ div.nav-link {
 		.bottom { transform: scaleX(1); }
 	}
 
+	@include media-breakpoint-only(sm) {
+		margin: 0 5px;
+		border-top: 1px solid grey;
+	}
+
 	@include media-breakpoint-only(xs) {
 		margin: 0 5px;
 		border-top: 1px solid grey;
 	}
+}
+
+.active {
+	color: #E50A12 !important;
+	.bottom { transform: scaleX(1) !important; }
 }
 
 .logout {
