--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -10,6 +10,12 @@
 	color: #00D65F;
 }
 
+.svg-align {
+  display: inline-flex;
+  position: relative;
+  top: -0.20rem;
+}
+
 .red-btn {
 	color: white;
   background-color: #E50A12;
