--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -58,3 +58,18 @@
 		border-color: white;
 	}
 }
+
+
+.loading {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+
+	min-height: 100vh;
+	height: 100%;
+
+	font-size: 1.4rem;
+	color: white;
+	background-color: black;
+}
