--- a/src/stylesheets/Search.scss
+++ b/src/stylesheets/Search.scss
@@ -43,12 +43,15 @@
 	border-left: none;
 	border-radius: 0 12px 12px 0;
 
-	&:hover{
+	&:hover {
 		color: #E50A12;
 	}
 
 	&:focus {
 		outline: none;
+	}
+
+	&:active {
 		color: white;
 		background-color: #E50A12;
 	}
