--- a/src/stylesheets/MovieTracker.scss
+++ b/src/stylesheets/MovieTracker.scss
@@ -3,6 +3,8 @@
 @import "./_breakpoints.scss";
 
 $duration: 0.20s;
+$red: #E50A12;
+$gold: #FADF61;
 
 
 #MovieTracker {
@@ -21,6 +23,7 @@ $duration: 0.20s;
 .mt-status-options {
 	display: flex;
 	justify-content: center;
+	margin-bottom: 40px;
 }
 
 
@@ -32,7 +35,7 @@ $duration: 0.20s;
   width: 100%;
   height: 2px;
 
-  background-color: #E50A12;
+  background-color: $red;
 
   transform: scaleX(0);
   transition: transform $duration ease;
@@ -43,7 +46,7 @@ $duration: 0.20s;
 	position: relative;
 	cursor: pointer;
 
-	margin: 0 50px;
+	margin: 0 3vw;
 	padding-bottom: 1px;
 	text-align: center;
 	font-size: 1.2rem;
@@ -52,65 +55,91 @@ $duration: 0.20s;
 	transition: color $duration ease 0s;
 
 	&:hover {
-		color: #E50A12;
+		color: $red;
 		.mt-bottom { transform: scaleX(1); }
 	}
 }
 
 .mt-active-item {
-	color: #E50A12;
+	color: $red;
 	.mt-bottom { transform: scaleX(1); }
 }
 
-table.mt-table {
-	width: 90%;
-	margin: 50px auto 0;
+.mt-table {
+	margin: 0 auto;
+	@include media-breakpoint-only(xl) { width: 90% !important; }
+	@include media-breakpoint-only(lg) { width: 90% !important; }
 }
 
 .mt-table-title {
+	width: 25%;
 	font-size: 1.4rem;
+	@include media-breakpoint-only(md) { font-size: 1rem; }
+	@include media-breakpoint-only(sm) { font-size: 1rem; }
+	@include media-breakpoint-only(xs) { font-size: 1rem; }
 }
 
 .mt-poster {
 	// maintain aspect ratio 2:3
-	width: 6vw; // 342px default
-	height: 9vw; // 513px default
+	// original = 342x513 px
+	@include media-breakpoint-only(md) { width: 12vw; }
+	@include media-breakpoint-only(sm) { width: 12vw; }
+	@include media-breakpoint-only(xs) { width: 12vw; }
 }
 
 .mt-overview {
+	@include media-breakpoint-only(md) { display: none; }
+	@include media-breakpoint-only(sm) { display: none; }
+	@include media-breakpoint-only(xs) { display: none; }
+}
 
-	@include media-breakpoint-only(md) {
-		display: none;
-	}
-
-	@include media-breakpoint-only(sm) {
-		display: none;
-	}
-
-	@include media-breakpoint-only(xs) {
-		display: none;
+.mt-row {
+	&:hover .mt-edit {
+		visibility: visible;
 	}
 }
 
-.mt-heart {
-	transform: scale(2);
-	color: #E50A12;
+.mt-edit {
+	visibility: hidden;
+	// @include media-breakpoint-only(md) { visibility: visible; }
+	// @include media-breakpoint-only(sm) { visibility: visible; }
+	// @include media-breakpoint-only(xs) { visibility: visible; }
+}
+
+//____________________ SVG => END ____________________
+
+.svg-edit {
+	margin: 5px 0;
+ 	font-size: 1.5rem;
+}
+
+.mt-eye {
+ 	font-size: 1.2rem;
+	cursor: pointer;
+	&:hover { color: #00AEFF; }
+}
+
+.mt-heart { 
+	color: $red;
 }
 
 .mt-heart-click {
 	cursor: pointer;
-	transform: scale(2);
-	&:hover { color: #E50A12; }
+	&:hover { color: $red; }
+}
+
+.mt-notes {
+	cursor: pointer;
+	&:hover { color: $gold; }
 }
 
 .mt-delete {
 	cursor: pointer;
-	transform: scale(2);
-	&:hover { color: #E50A12; }
+	&:hover { color: $red; }
 }
 
 .mt-check {
+ 	font-size: 1.9rem;
 	cursor: pointer;
-	transform: scale(2);
 	&:hover { color: #00D65F; }
 }
