--- a/src/stylesheets/NotesModal.scss
+++ b/src/stylesheets/NotesModal.scss
@@ -72,7 +72,9 @@
 .nm-notes {
 	display: block;
 	font-size: 1rem;
+
 	margin: 10px auto 20px;
+	padding: 5px 10px;
 
 	width: 100%;
 	height: 15rem;
