connection error message added

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -16,6 +16,15 @@
   top: -0.10rem;
 }
 
+.svg-err {
+	font-size: 10rem;
+	color: #E50A12;
+}
+
+.err-text {
+	font-size: 2rem;
+}
+
 .red-btn {
 	color: white;
   background-color: #E50A12;
